# git-n-rust-skills

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  MCP-README.md  README.md  activate-skills.ps1  activate-skills.sh  activate.git-n-rust-skills.ps1  activate.git-n-rust-skills.sh  deactivate-skills.ps1  deactivate.git-n-rust-skills.ps1  package.json  project-plan.md  pyproject.toml  required-skills.md
.claude/rules/: benchmarking.md  binary-tree-analyzer.md  cicd-pipelines.md  cli-design.md  data-processing-polars.md  distribution.md  file-based-integration.md  fuzz-testing.md  git-internals-master.md  github-issues-system.md  large-repo-optimization.md  project-architect.md  python-testing.md  security-first-design.md  software-metrics.md  statistical-analysis.md  task-orchestrator.md  token-saver.md
.codex/: benchmarking.md  binary-tree-analyzer.md  cicd-pipelines.md  cli-design.md  data-processing-polars.md  distribution.md  file-based-integration.md  fuzz-testing.md  git-internals-master.md  github-issues-system.md  large-repo-optimization.md  project-architect.md  python-testing.md  security-first-design.md  software-metrics.md  statistical-analysis.md  task-orchestrator.md  token-saver.md
00-productivity-meta/binary-tree-analyzer/: SKILL.md
00-productivity-meta/project-architect/: SKILL.md
00-productivity-meta/task-orchestrator/: SKILL.md  (+2 more)
git-n-rust-skills/: README.md
mcp_server/: __init__.py  activator.py  github_fetcher.py  github_registry.py  requirements.txt  server.py  skill_registry.py  test_server.py
skill-creator/: SKILL.md  generate_skill.py
(+47 files in other folders)
